[workspace]
resolver = "2"
members = ["wiretunn", "wiretunn-cli"]

[workspace.dependencies]
boringtun = { git = "https://github.com/feifeigood/boringtun.git", branch = "custom-tokio" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "fmt",
    "env-filter",
    "time",
] }
