[workspace]
resolver = "2"
members = ["wiretunn", "wiretunn-cli", "wiretunn-ffi"]

[workspace.dependencies]
boringtun = { git = "https://github.com/feifeigood/boringtun.git", branch = "custom-tokio" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "fmt",
    "env-filter",
    "chrono",
] }

[profile.release]
lto = true
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.
panic = "abort"   # Must set abort, otherwise iOS/MacOS will panic
strip = true
