[package]
name = "wiretunn-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5.4", features = ["derive", "env"] }
serde = { version = "1.0.197", features = ["derive"] }
base64 = "0.22.0"
toml = "0.8.12"
ipnet = "2.9.0"
futures = { version = "0.3.30", features = ["async-await"] }
tokio = { version = "1.36.0", features = ["rt", "signal", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["rt"] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
boringtun = { workspace = true }

wiretunn = { path = "../wiretunn" }
