[package]
name = "wiretunn"
version = "0.1.0"
edition = "2021"
authors = ["PengFei Bai <feifeigood91@gmail.com>"]

[features]
default = ["multicore"]
multicore = ["tokio/rt-multi-thread", "num_cpus"]

[dependencies]
thiserror = "1"
cfg-if = "1.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.7.0"
toml = "0.8.12"
base64 = "0.22.0"
bytes = "1.6.0"
derive_builder = "0.20.0"
num_cpus = { version = "1", optional = true }
rand_core = { version = "0.6.3", features = ["getrandom"] }
parking_lot = "0.12.1"
dashmap = "5.5.3"
ipnet = { version = "2.9.0", features = ["serde"] }
ip_network = "0.4.1"
ip_network_table = "0.2.0"
net-route = "0.4.2"
tun = { version = "0.6.1", features = ["async"] }
socket2 = { version = "0.5.6", features = ["all"] }
futures = { version = "0.3.30", features = ["async-await"] }
futures-util = { version = "0.3.30", features = ["sink"] }
tokio = { version = "1.36.0", features = [
    "net",
    "macros",
    "rt",
    "parking_lot",
    "time",
    "io-util",
    "sync",
    "signal",
] }
tokio-util = { version = "0.7.10", features = ["codec"] }

smoltcp = { version = "0.11", default-features = false, features = [
    "std",
    "log",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-udp",
    "socket-tcp",
] }

tracing = { workspace = true }
boringtun = { workspace = true }

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
