[package]
name = "wiretunn"
version = "0.2.0"
edition = "2021"
authors = ["PengFei Bai <feifeigood91@gmail.com>"]

[features]
default = ["multicore"]
multicore = ["tokio/rt-multi-thread", "num_cpus"]

[dependencies]
thiserror = "1"
cfg-if = "1.0.0"
chrono = "0.4.38"
libc = "0.2.153"
serde = { version = "1.0.197", features = ["derive"] }
serde_with = "3.7.0"
serde_json = "1.0.117"
toml = "0.8.12"
byte-unit = { version = "5.1.4", features = [
    "serde",
    "std",
    "byte",
], default-features = false }
byteorder = "1.5.0"
base64 = "0.22.0"
bytes = "1.6.0"
num_cpus = { version = "1", optional = true }
rand_core = { version = "0.6.3", features = ["getrandom"] }
parking_lot = "0.12.1"
pin-project = "1"
dashmap = "5.5.3"
ipnet = { version = "2.9.0", features = ["serde"] }
ip_network = "0.4.1"
ip_network_table = "0.2.0"
tun2 = { version = "1", features = ["async"] }
socket2 = { version = "0.5.6", features = ["all"] }
futures = { version = "0.3.30", features = ["async-await"] }
futures-util = { version = "0.3.30", features = ["sink"] }
tokio = { version = "1.36.0", features = [
    "net",
    "macros",
    "rt",
    "parking_lot",
    "time",
    "io-util",
    "sync",
    "signal",
] }
tokio-util = { version = "0.7.10", features = ["codec"] }
axum = { version = "0.7.5" }
tower = { version = "0.4.13", features = [
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.5.0", features = [
    "add-extension",
    "auth",
    "compression-full",
    "limit",
    "trace",
] }
tower-layer = "0.3.2"

smoltcp = { version = "0.11", default-features = false, features = [
    "std",
    "log",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-udp",
    "socket-tcp",
] }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
boringtun = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "linux", target_os = "windows"))'.dependencies]
net-route = "0.4.3"

[target.'cfg(target_os = "windows")'.dependencies]
blake2 = "0.10.6"
unicode-normalization = "0.1.23"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_IO",
] }
